--- a/src/new.css
+++ b/src/new.css
@@ -2,7 +2,7 @@ body {
     font-size: 15px;
     font-weight: normal;
     line-height: 24px;
-    font-family: 'Helvetica Neue'h;
+    font-family: 'Helvetica Neue';
 }
 a {
     text-decoration: none;
@@ -151,4 +151,104 @@ a {
     background-image: url("./img/iphone-mock.png");
 }
 
+
+/*<---- Footer ---> */
+
+.footer {
+    border-top: 1px solid;
+    color: rgb(223,226,229);
+}
+
+.footer-container {
+    align-items: center;
+    display: block;
+    margin: auto;
+    width: 70%;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.wix-footer {
+	display: -webkit-flex; /* Safari */
+	-webkit-flex-direction: row; /* Safari 6.1+ */
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+
+	flex-wrap: wrap;
+
+	margin: 20px;
+	padding-top: 70px;
+	padding-bottom: 70px;
+}
+
+.wix-footer .subscribe-button {
+	border: solid;
+	border-color: black;
+	border-width: 1px;
+	border-radius: 30px;
+	text-align: center;
+	padding: 8px;
+	color: grey;
+	width: 130px;
+	align-items: center;
+
+	-webkit-transition: background-color, color 1s ease-out;
+	-moz-transition: background-color, color 1s ease-out;
+	-o-transition: background-color, color 1s ease-out;
+	transition: background-color, color 1s ease-out;
+}
+
+.wix-footer .subscribe-button:hover {
+	color: #733CA6;
+	border-color: #733CA6;
+}
+
+.wix-footer .footer-links-container {
+	display: -webkit-flex; /* Safari */
+	-webkit-flex-direction: row; /* Safari 6.1+ */
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin: 50px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+
+	flex: 1;
+}
+
+.links-list {
+	list-style-type: none;
+	margin: 30px;
+}
+
+.links-list a {
+	color: black;
+	font-family: 'Helvetica Neue Thin';
+}
+
+.links-list a:hover {
+	color: #733CA6
+}
+
+.wix-footer .subscribe-container {
+	margin: 20px;
+	display: flex;
+	flex-direction: column;
+	flex: 0.5;
+}
+
+.wix-footer p {
+	margin-top: 10px;
+	color: black;
+	opacity: 100%;
+	font-family: 'Helvetica Neue Thin';
+}
+
+.wix-footer .email-container {
+	margin: 20px;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
 
