--- a/src/new.css
+++ b/src/new.css
@@ -31,7 +31,7 @@ header {
     width: 100%;
     
 }
-	@media screen and (min-width: 64em) {
+	@media screen and (min-width: 42em) {
 		.wix-page-header {
 			padding-top: 1rem;
 			padding-bottom: 1rem; } 
@@ -117,7 +117,12 @@ header {
     .projects-container {
     width: 100%;
     }}
-    @media screen and (min-width: 64em) {
+    @media screen and (min-width: 42em) and (max-width: 64em) {
+        .projects-container {
+            justify-content: center;
+        }
+    }
+    @media screen and (min-width: 42em) {
 		.projects-container {
 			width: 70%;
             margin-left: 15%; } }
@@ -148,6 +153,7 @@ header {
 }
 .project-demoapp-links-container{
     display: flex;
+    flex-wrap: wrap;
     
 }
 .project-icons-container {
@@ -159,16 +165,30 @@ header {
     align-items: center;
     justify-content: center;
 }
-    @media screen and (min-width: 64em) {
+    @media screen and (min-width: 42em) {
 		.project {
-			width: 47%; }
+			width: 47%;
+            min-width: 540px; }
+        .project-text-container{
+             width: 45%;
+             margin-left: 2.5%;
+            }
         .project-media-container{
-            margin-left: 40px;}
-             }
+            width: 45%;
+            margin-left: 2.5%;
+            }
+             
        .project-demoapp-links-container{
-            margin-top: 150px;
-            justify-content: center;
-    
+            margin-top: 40px;
+            justify-content: none;
+            }
+        .project-icons-container {
+            width: auto;
+            margin-left: 105px;
+            }
+        .project-video-div {
+            margin-left: 20px;
+            }
         }
 
     @media screen and (max-width: 42em) {
