--- a/src/new.css
+++ b/src/new.css
@@ -150,6 +150,7 @@ header {
     @media screen and (max-width: 700px) {
         .project {
         width: 100%;
+        padding-right: 8px;
         justify-content: center;
         
         } }
