--- a/src/new.css
+++ b/src/new.css
@@ -208,7 +208,7 @@ header {
         .project-icons-container {
             width: 20px;
             display: flex;
-            height: 100%;
+            height: 417px;
             flex-direction: column;
             justify-content: flex-end;
             float: right;
@@ -237,7 +237,6 @@ header {
     @media screen and (min-width: 700px) and (max-width: 1300px) {
         .project-icons-container {
             width: 20px;
-            margin-top: 50%;
             float: right;
             }
     }
