--- a/src/new.css
+++ b/src/new.css
@@ -144,13 +144,51 @@ header {
     
 }
 
+.big-project{
+    background-color: rgb(249,247,247); 
+    display: flex; 
+    vertical-align: top; 
+    padding: 24px;
+    padding-right: 0; 
+    margin-top: 30px; 
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.project:hover {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.1s;
+}
+
+.big-project:hover {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.1
+}
+.big-project-video-div {
+    width: 80%;
+    height: 417px;
+    margin: 0 auto;
+    background: url('./img/MacMock.png') no-repeat top transparent;
+    background-size: 100%;
+}
     @media screen and (max-width: 700px) {
         .project {
         width: 100%;
         padding: 8px 16px;
         justify-content: center;
         
-        } }
+        } 
+        .big-project{
+            justify-content: center;
+            padding: 8px 16px;
+            width: 100%;
+        }
+        .big-project-video-div {
+            width: 80%;
+            height: 135px;
+            margin: 0 auto;
+        }}
+        
     @media screen and (min-width: 700px) and (max-width: 1300px) {
         .project {
             width: 700px;
@@ -161,6 +199,7 @@ header {
 .project-text-container{
     width: 50%;
 }
+
 .project-demoapp-links-container{
     display: flex;
     flex-wrap: wrap;
@@ -189,7 +228,7 @@ header {
              width: 45%;
              display: flex;
              flex-direction: column;
-             justify-content: space-between;
+             
             }
         .project-media-container{ 
             width: 50%;
@@ -197,14 +236,31 @@ header {
             }
              
        .project-demoapp-links-container{
-            margin-top: 40px;
+            flex: 1;
+            flex-direction: column;
+            justify-content: flex-end;
             }
-        
+        .big-project-text-container{
+            width: 30%;
+        }
+        .big-project-media-container {
+            width: 70%;
+        }
         .project-video-div {
             float: right;
             margin-right: -25px;
             }
         }
+        /*.project-github-link {
+            display: block;
+            margin-top: 20px;
+            color: wheat;
+            background-color: rgb(143,93,193);
+            vertical-align: middle;
+            width: 80%;
+            border-radius: 20px;
+            text-align: center;
+        }*/
         .project-icons-container {
             width: 20px;
             display: flex;
@@ -221,7 +277,7 @@ header {
             margin-top: 0;
         }
         .project-description {
-            margin-top: -40px;
+            
         }
         .apple-icon {
             cursor: pointer;
@@ -342,7 +398,13 @@ header {
     top: 31px;
     left:14px;
 }
-
+.big-project-video {
+    position: relative;
+    top: 3.7%;
+    left: 12%;
+    height: 81.25%;
+    width: 76.1%;
+}
 
 
 /*<---- Footer ---> */
@@ -450,4 +512,7 @@ header {
 	flex-direction: column;
 	flex: 1;
 }
+
+
+
 
