--- a/src/new.css
+++ b/src/new.css
@@ -46,7 +46,7 @@ header {
     width: 100%;
     
 }
-	@media screen and (min-width: 42em) {
+	@media screen and (min-width: 700px) {
 		.wix-page-header {
 			padding-top: 1rem;
 			padding-bottom: 1rem; } 
@@ -59,10 +59,10 @@ header {
          }   
     }
 
-	@media screen and (min-width: 42em) and (max-width: 64em) {
+	@media screen and (min-width: 700px) and (max-width: 1300px) {
 		.wix-page-header {
 			padding: 3rem 4rem; } }
-	@media screen and (max-width: 42em) {
+	@media screen and (max-width: 700px) {
 		.wix-page-header {
 			padding: 2rem 1rem; } 
         .header-title-container {
@@ -88,7 +88,7 @@ header {
 	letter-spacing: 3px;
 }
 
-    @media screen and (max-width: 42em) { 
+    @media screen and (max-width: 700px) { 
         .main-logo {
             width:90%; 
         } 
@@ -118,7 +118,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-    @media screen and (max-width: 42em) {
+    @media screen and (max-width: 700px) {
     .projects-container {
     width: 100%;
     }}
@@ -174,13 +174,13 @@ header {
     @media screen and (max-width: 700px) {
         .project {
         width: 100%;
-        padding: 8px 16px;
+        padding: 16px 16px;
         justify-content: center;
         
         } 
         .big-project{
             justify-content: center;
-            padding: 8px 16px;
+            padding: 16px 16px;
             width: 100%;
         }
         .big-project-video-div {
@@ -323,6 +323,7 @@ header {
         }
         .project-demoapp-links-container{
             flex-wrap: wrap;
+            width: 400px;
             justify-content: center;
             margin-top: auto;   
         }
@@ -364,7 +365,7 @@ header {
     margin-bottom: 20px;
     color: #733CA6;
 }
-@media screen and (max-width: 42em) {
+@media screen and (max-width: 700px) {
     .project-title {
         text-align: center;
         font-size: 24px;
@@ -398,13 +399,13 @@ header {
 
 .project-video-iphone {
     position: relative;
-    top: 48px;
+    top: 47px;
     left: 30px;
 }
 .project-video-android {
     position: relative;
-    top: 31px;
-    left:14px;
+    top: 48px;
+    left:27px;
 }
 .big-project-video {
     position: relative;
